new title - poker.html

--- a/poker.html
+++ b/poker.html
@@ -9,7 +9,7 @@
 <p>"click the button to generate deck"</p>
 
 <button onclick="play()">Start Game</button>
-<button onclick="next()">river card</button>
+<button onclick="next()">river cardddd</button>
 
 
 <p id="new"></p>
