more organized with details

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <p>"click the button to generate deck"</p>
 
 <button onclick="play()">Start Game</button>
-<button onclick="next()">river cardddd</button>
+<button onclick="playRiver()">river cardddd</button>
+
 
 
 <p id="new"></p>
