added functions to combine hand with river

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <button onclick="play()">Start Game</button>
 <button onclick="playRiver()">river cardddd</button>
+<button onclick="Evaluate()">Evaluate hand</button>
 
 
 
