added a lot of stuff, big one is the bot. added check, call, raise, fold buttons, currently with some logic

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <p>"click the button to generate deck"</p>
 
-<button onclick="play()">Start Game</button>
+<button onclick="newRound()">Start Game</button>
 <button onclick="playRiver()">river cardddd</button>
 <button onclick="Evaluate()">Evaluate hand</button>
 
@@ -40,6 +40,12 @@
       <div class="slot" id="7"></div>
   </div>
 </div>
+
+<button onclick="Check()">Check</button>
+<button onclick="Call()">Call</button>
+<button onclick="Raise()">Raise</button>
+<button onclick="Fold()">Fold</button>
+
 
 
 
