--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
 <script src="deck.js"> </script>
 <div class="box">
   <div class="rowOne">
-      <div class="slot" id="0"></div>
-      <div class="slot" id="1"></div>
-      <div class="slot" id="2"></div>
-      <div class="slot" id="3"></div>
+      <div class="slot" id="0"><div id="chips1" > Chips: </div></div>
+
+      <div class="slot" id="1"><div id="chips1" > Chips: </div></div>
+      <div class="slot" id="2"><div id="chips1" > Chips: </div></div>
+      <div class="slot" id="3"><div id="chips1" > Chips: </div></div>
   </div>
 
   <div class = "river">
@@ -34,10 +35,10 @@
   </div>
 
   <div class="rowTwo">
-      <div class="slot" id="4"></div>
-      <div class="slot" id="5"></div>
-      <div class="slot" id="6"></div>
-      <div class="slot" id="7"></div>
+      <div class="slot" id="4"><div id="chips2" > Chips: </div></div>
+      <div class="slot" id="5"><div id="chips2" > Chips: </div></div>
+      <div class="slot" id="6"><div id="chips2" > Chips: </div></div>
+      <div class="slot" id="7"><div id="chips2" > Chips: </div></div>
   </div>
 </div>
 
@@ -45,6 +46,10 @@
 <button onclick="Call()">Call</button>
 <button onclick="Raise()">Raise</button>
 <button onclick="Fold()">Fold</button>
+<button onclick="textBox()">New Text</button>
+<div id="textBox">
+  <div id="messages"></div>
+</div>
 
 
 
