--- a/index.html
+++ b/index.html
@@ -5,52 +5,52 @@
     <link rel="stylesheet" href="./css/cards.css">
   </head>
 <body>
-
-<p>"click the button to generate deck"</p>
-
-<button onclick="newRound()">Start Game</button>
-<button onclick="playRiver()">river cardddd</button>
-<button onclick="Evaluate()">Evaluate hand</button>
-
-
-
-<p id="new"></p>
+<div class = "container">
+  <div class="b">
+    <p>"click the button to generate deck"</p>
+    <button onclick="newRound()">Start Game</button>
+    <button onclick="playRiver()">river cardddd</button>
+    <button onclick="Evaluate()">Evaluate hand</button>
+    <p id="new"></p>
+  </div>
 
 <script src="deck.js"> </script>
-<div class="box">
-  <div class="rowOne">
-      <div class="slot" id="0"><div id="chips1" > Chips: </div></div>
 
-      <div class="slot" id="1"><div id="chips1" > Chips: </div></div>
-      <div class="slot" id="2"><div id="chips1" > Chips: </div></div>
-      <div class="slot" id="3"><div id="chips1" > Chips: </div></div>
+  <div class="box">
+
+      <div class="rowOne">
+          <div class="slot" id="0"><div id="chips1" > Chips: </div></div>
+          <div class="slot" id="1"><div id="chips1" > Chips: </div></div>
+          <div class="slot" id="2"><div id="chips1" > Chips: </div></div>
+          <div class="slot" id="3"><div id="chips1" > Chips: </div></div>
+      </div>
+
+      <div class = "river">
+          <div class="riverSlot" id="r0"></div>
+          <div class="riverSlot" id="r1"></div>
+          <div class="riverSlot" id="r2"></div>
+          <div class="riverSlot" id="r3"></div>
+          <div class="riverSlot" id="r4"></div>
+      </div>
+
+      <div class="rowTwo">
+          <div class="slot" id="4"><div id="chips2" > Chips: </div></div>
+          <div class="slot" id="5"><div id="chips2" > Chips: </div></div>
+          <div class="slot" id="6"><div id="chips2" > Chips: </div></div>
+          <div class="slot" id="7"><div id="chips2" > Chips: </div></div>
+      </div>
+
   </div>
 
-  <div class = "river">
-      <div class="riverSlot" id="r0"></div>
-      <div class="riverSlot" id="r1"></div>
-      <div class="riverSlot" id="r2"></div>
-      <div class="riverSlot" id="r3"></div>
-      <div class="riverSlot" id="r4"></div>
-  </div>
-
-  <div class="rowTwo">
-      <div class="slot" id="4"><div id="chips2" > Chips: </div></div>
-      <div class="slot" id="5"><div id="chips2" > Chips: </div></div>
-      <div class="slot" id="6"><div id="chips2" > Chips: </div></div>
-      <div class="slot" id="7"><div id="chips2" > Chips: </div></div>
+  <button onclick="Check()">Check</button>
+  <button onclick="Call()">Call</button>
+  <button onclick="Raise()">Raise</button>
+  <button onclick="Fold()">Fold</button>
+  <button onclick="textBox()">New Text</button>
+  <div id="textBox">
+    <div id="messages"></div>
   </div>
 </div>
-
-<button onclick="Check()">Check</button>
-<button onclick="Call()">Call</button>
-<button onclick="Raise()">Raise</button>
-<button onclick="Fold()">Fold</button>
-<button onclick="textBox()">New Text</button>
-<div id="textBox">
-  <div id="messages"></div>
-</div>
-
 
 
 
